--- a/project.config.json
+++ b/project.config.json
@@ -10,7 +10,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "1.6.6",
 	"appid": "wxad633a49ad350b1b",
-	"projectname": "%E5%BE%AE%E4%BF%A1Maker",
+	"projectname": "we_chuangzhe",
 	"condition": {
 		"search": {
 			"current": -1,
